<resources>
    <string name="app_name">ShareQuiz</string>
    <string name="action_settings">Settings</string>
    <string name="get_otp">Get Otp</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="enter_phone_prompt">Enter your Phone Number</string>
    <string name="verify_otp_prompt">Enter 4 digit OTP</string>
    <string name="prompt_username">Enter your username</string>
    <string name="prompt_language">Select your Language</string>
    <string name="prompt_topic">Select your Topic</string>
    <string name="user_name">UserName</string>
    <string name="submit">Submit</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="join_room">Join Room</string>
    <string name="create_room">Create Room</string>
    <string name="new_question">New Question</string>
    <string name="game_over">Game Over</string>
    <string name="start_new_quiz">Start New Quiz</string>
    <string name="result">Result</string>
    <string name="you_won_string">You Won</string>
    <string name="you_lose_string">You Lose</string>
    <string name="match_tie_string">Tied Match</string>
    <string name="your_string">You \n %1$s</string>
    <string name="opponent_string">Opponent \n %1$s</string>
    <string name="title_activity_game_complete_screen">GameCompleteScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
